# net_message_exchange

./: CMakeLists.txt  net_message_exchange.sln
net_message_exchange/: CMakeLists.txt  net_message_exchange.cpp  net_message_exchange.h  net_message_exchange.vcproj
test_client/: CMakeLists.txt  test_client.cpp  test_client.vcproj
test_server/: CMakeLists.txt  test_server.cpp  test_server.vcproj
